Refactoring FindByUserId
